fixes annoying flag alignment issue

--- a/src/CountryCard.css
+++ b/src/CountryCard.css
@@ -5,22 +5,22 @@
   color: unset;
   border-radius: 8px;
   box-shadow: 0 1px 8px var(--Shadow);
+  max-width: 250px;
 }
 
 .CountryCard > .flag {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: block;
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
-  aspect-ratio: 20/13 ;
+  aspect-ratio: 30/17;
   background-color: var(--Background);
 }
 
 .CountryCard > .flag img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
-  max-width: 100%;
-  max-height: 100%;
+  vertical-align: middle;
 }
 
 .CountryCard .details {
